<resources>
    <string name="app_name">BharatX</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="phone_number">Phone Number:</string>
    <string name="send_otp">Send OTP</string>
    <string name="waiting_for_otp">Waiting for automatically detecting OTP…</string>
    <string name="next">Next &gt;</string>
    <string name="change_number">&lt; Change number</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="aadhaar_number">Aadhaar Number</string>

    <string name="employment_status">What do you do?</string>
    <string-array name="employment_status_values">
        <item>Student</item>
        <item>Vetti payen</item>
        <item>Working</item>
    </string-array>

    <string name="business_account_prompt">Is this a business account?</string>
    <string-array name="boolean_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="organisation_name">Organisation Name</string>
    <string name="gst_number">GST Number</string>

    <string name="scale">Scale</string>
    <string-array name="business_scales">
        <item>Small</item>
        <item>Large</item>
    </string-array>

    <string name="submit">Submit</string>

    <string name="credits_taken">Credits taken: %1$s</string>

    <string name="pay_to_upi">Pay to UPI</string>
    <string name="pay_to_bank">Pay to Bank</string>
    <string name="your_requests">Your requests</string>

</resources>
