<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfoActivity"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <TextView
        style="@style/labelStyle"
        android:text="@string/name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editTextStyle"
        android:inputType="text" />

    <TextView
        style="@style/labelStyle"
        android:text="@string/age"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editTextStyle"
        android:inputType="number" />

    <TextView
        style="@style/labelStyle"
        android:text="@string/aadhaar_number"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editTextStyle"
        android:inputType="number" />

    <TextView
        style="@style/labelStyle"
        android:text="@string/employment_status"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/spinnerStyle"
        android:entries="@array/employment_status_values" />

    <!-- Push it to bottom-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <!---->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        style="@style/buttonStyle.squaredButton"
        android:id="@+id/next_button"/>

</LinearLayout>